# intentguard

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.multi  README.md  ROADMAP.md  docker-compose.yml  package.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
evaluation/: adversarial_suite.py  benchmark_results.json  gates.py  gating_report_finance.json  gating_report_healthcare.json  gating_report_legal.json  latency_benchmark.py  load_test.py  traffic_sim.py
evaluation/test_sets/: finance_adversarial.jsonl  finance_adversarial.reviewed.jsonl  healthcare_adversarial.jsonl  healthcare_adversarial.reviewed.jsonl  legal_adversarial.jsonl  legal_adversarial.reviewed.jsonl
model_cards/: generate.py  template.md
policies/: finance.json  healthcare.json  legal.json
scripts/: benchmark_quantization.sh  publish_huggingface.py  test_docker.sh  test_pip_install.sh
src/intentguard/: __init__.py  classifier.py  config.py  metrics.py  normalize.py  policy.py  router.py  schema.py  server.py
tests/: conftest.py  test_classifier.py  test_model_card.py  test_normalize.py  test_policy.py  test_router.py  test_schema_v2.py  test_server.py
training/: Makefile  calibrate.py  export_onnx.py  fine_tune.py  router_config_template.json  train_config.yaml  train_router.py
training/data_generation/: augment_deny.py  hard_negative_miner.py  seed_dataset.py  seed_healthcare.py  seed_legal.py  synthetic_generator.py
training/data_generation/templates/: adversarial_cloaking.txt  ambiguous_queries.txt  hard_negatives.txt  positive_queries.txt
