[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intentguard"
version = "0.1.0"
description = "Vertical intent classifier for LLM chatbot guardrails"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "perfecXion.ai" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "onnxruntime>=1.20.0",
    "tokenizers>=0.21.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
train = [
    "torch>=2.5.0",
    "transformers>=4.47.0",
    "datasets>=3.2.0",
    "scikit-learn>=1.6.0",
    "accelerate>=1.2.0",
    "onnx>=1.17.0",
    "optimum>=1.24.0",
    "sentencepiece>=0.2.0",
]
eval = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/intentguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"training/**" = ["E501"]
"evaluation/**" = ["E501"]
